// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`(1) Default render 1`] = `
<div
  className="user-nav"
>
  <a
    className="user-wallet"
    href="/@foo/wallet"
    onClick={[Function]}
    title="Wallet"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M20,8H4V6H20M20,18H4V12H20M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
        fill="currentColor"
      />
    </svg>
  </a>
  <span
    className="notifications"
    onClick={[Function]}
    title="Notifications"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21"
        fill="currentColor"
      />
    </svg>
  </span>
  <div
    className="custom-dropdown float-right"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="user-avatar medium"
      style={
        Object {
          "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
        }
      }
    />
  </div>
</div>
`;

exports[`(2) Has rewards  1`] = `
<div
  className="user-nav"
>
  <a
    className="user-wallet"
    href="/@foo/wallet"
    onClick={[Function]}
    title="You have unclaimed points"
  >
    <span
      className="reward-badge"
    />
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M20,8H4V6H20M20,18H4V12H20M20,4H4C2.89,4 2,4.89 2,6V18A2,2 0 0,0 4,20H20A2,2 0 0,0 22,18V6C22,4.89 21.1,4 20,4Z"
        fill="currentColor"
      />
    </svg>
  </a>
  <span
    className="notifications"
    onClick={[Function]}
    title="Notifications"
  >
    <svg
      viewBox="0 0 24 24"
    >
      <path
        d="M21,19V20H3V19L5,17V11C5,7.9 7.03,5.17 10,4.29C10,4.19 10,4.1 10,4A2,2 0 0,1 12,2A2,2 0 0,1 14,4C14,4.1 14,4.19 14,4.29C16.97,5.17 19,7.9 19,11V17L21,19M14,21A2,2 0 0,1 12,23A2,2 0 0,1 10,21"
        fill="currentColor"
      />
    </svg>
  </span>
  <div
    className="custom-dropdown float-right"
    onClick={[Function]}
    onMouseEnter={[Function]}
    onMouseLeave={[Function]}
  >
    <span
      className="user-avatar medium"
      style={
        Object {
          "backgroundImage": "url(https://images.ecency.com/u/foo/avatar/medium)",
        }
      }
    />
  </div>
</div>
`;
